--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,17 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   flutter_screenutil: ^5.9.0
+  retrofit: ^4.0.1
+  dio: ^5.3.2
+  json_annotation: ^4.8.1
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: ^7.0.8
+  build_runner: ^2.1.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
